# Fast-Quadric-Mesh-Simplification

./: CMakeLists.txt
src/: FastQuadricMeshSimplification.cpp  FastQuadricMeshSimplification.h  SymetricMatrix.cpp  SymetricMatrix.h  VecMath.cpp  VecMath.h
